# zsh-src

./: Cargo.toml  LICENSE  README.md  build.rs  release.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: config.site
src/: cache.rs  commands.rs  download.rs  headers.rs  lib.rs  resolve.rs  source.rs
